--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^6.7.1",
     "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.3"
+  },
+  "devDependencies": {
+    "semantic-ui-ember": "github:Semantic-Org/Semantic-UI-Ember"
   }
 }
